--- a/frontend/src/components/Authenticate.css
+++ b/frontend/src/components/Authenticate.css
@@ -1,3 +1,20 @@
 .authenticate {
   border: 2px solid red;
+  height: 50vh;
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+}
+
+button {
+  width: 100px;
+  height: 50px;
+  margin: 5px;
+}
+
+.instructions {
+  text-align: center;
 }
