homebrewed the piano, no longer need react-piano

--- a/frontend/src/components/Keyboard.css
+++ b/frontend/src/components/Keyboard.css
@@ -1,4 +1,5 @@
 .keyboard {
+  border: 2px solid green;
   position: relative;
   width: 400px;
   height: 200px;
@@ -12,12 +13,10 @@
 .black {
   height: 120px;
   width: 30px;
-  background-color: black;
   z-index: 1;
 }
 
 .white {
   height: 200px;
   width: 40px;
-  background-color: white;
 }
