--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,49 +3,12 @@ body {
   margin: 20px;
 }
 
-ol,
-ul {
-  padding-left: 30px;
-}
-
-.board-row:after {
-  clear: both;
-  content: "";
-  display: table;
-}
-
-.status {
-  margin-bottom: 10px;
-}
-
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 34px;
-  height: 300px;
+.note {
+  background: gold;
+  text-align: center;
+  height: 300px; 
+  width: 300px;
   margin-right: 20px;
   margin-top: 20px;
-  padding: 0;
-  text-align: center;
-  width: 300px;
-}
-
-.square:focus {
-  outline: none;
-}
-
-.kbd-navigation .square:focus {
-  background: #ddd;
-}
-
-.game {
-  display: flex;
-  flex-direction: row;
-}
-
-.game-info {
-  margin-left: 20px;
+  line-height: 40px;
 }
