refactors suggested at code review.  separating components out in index.js, moving component-specific helper functions, still building new ViewReply parent component

--- a/frontend/src/components/ViewReply.css
+++ b/frontend/src/components/ViewReply.css
@@ -1,3 +1,12 @@
-.viewNoteContent {
+.threadReplies {
   white-space: pre-wrap;
+}
+
+.title {
+  font-size: 50px;
+  text-align: center;
+}
+
+.threadReplies {
+  border: 1px solid red;
 }
